8k and streamlit added

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W1101 15:27:28.338000 3296 site-packages\\torch\\distributed\\elastic\\multiprocessing\\redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n"
+      "W1103 12:28:33.840000 7184 site-packages\\torch\\distributed\\elastic\\multiprocessing\\redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41718b0315c641f1888f98353aba5e19",
+       "model_id": "49198ffebd55492591f9f57b22d080a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8aef39c3f6db4afd83dce615336c8a2b",
+       "model_id": "7ddf632f457b432da72ae3d060126065",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,9 +66,9 @@
     }
    ],
    "source": [
-    "config = PeftConfig.from_pretrained(\"finetuned-hindi-model\")\n",
+    "config = PeftConfig.from_pretrained(\"finetuned-hindi-model-8k\")\n",
     "base = AutoModelForCausalLM.from_pretrained(config.base_model_name_or_path)\n",
-    "model = PeftModel.from_pretrained(base, \"finetuned-hindi-model\")\n",
+    "model = PeftModel.from_pretrained(base, \"finetuned-hindi-model-8k\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(config.base_model_name_or_path)"
    ]
   },
@@ -84,73 +84,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
+   "id": "da878eda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_text = \"डुकन ने बंदर खोली\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "b5c74765",
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages = [\n",
-    "    {\"role\": \"system\", \"content\": \"You are a hindi language expert in error correction. Correct any type of hindi error you see in the given line and return the corrected version as output.\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Correct grammar for: ये  क्रियाओं का सम्पूर्ण नियंत्रण करता है\"},\n",
-    "]"
+    "input = f\"Correct grammar for: {input_text}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "e0ac8b8f",
+   "execution_count": 7,
+   "id": "961d78e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_ids = tokenizer.apply_chat_template(\n",
-    "        messages,\n",
-    "        return_tensors=\"pt\",\n",
-    "        add_generation_prompt=True # Important for starting new conversations\n",
-    "    ).to(model.device)"
+    "tokenized_inputs = tokenizer(input, return_tensors=\"pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "961d78e7",
+   "execution_count": 8,
+   "id": "b9ca5c79",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
       "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
      ]
-    }
-   ],
-   "source": [
-    "generated_ids = model.generate(\n",
-    "    input_ids=input_ids,\n",
-    "    max_new_tokens=512, # Adjust as needed\n",
-    "    do_sample=False,\n",
-    "    num_beams=1,\n",
-    "    repetition_penalty=1.1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "5857813e",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "यह पूर्ण रूप से सभी क्रियाओं को नियंत्रित करता है। </s>\n"
+      "<s> Correct grammar for: डुकन ने बंदर खोली।\n",
+      "</s>\n"
      ]
     }
    ],
    "source": [
-    "output_text = tokenizer.decode(generated_ids[0][input_ids.shape[1]:], skip_special_tokens=True)\n",
-    "print(output_text)"
+    "outputs = model.generate(**tokenized_inputs, max_new_tokens=5)\n",
+    "result = tokenizer.decode(outputs[0])\n",
+    "print(result)"
    ]
   }
  ],
